syntax = "proto3";

package de.zbw.lori.api.v1;

option java_package = "de.zbw.lori.api";
option java_multiple_files = true;

message FullImportRequest {
}

message FullImportResponse {
  int32 items_imported = 1;
  int32 items_deleted = 2;
}

message CheckForRightErrorsRequest{
}

message CheckForRightErrorsResponse{
  int32 number_of_errors = 1;
}

message ApplyTemplatesRequest {
  bool all = 1;
  repeated string right_ids = 2;
  bool skip_draft = 3;
  bool dry_run = 4;
}

enum ConflictType {
  CONFLICT_TYPE_UNSPECIFIED = 0;
  CONFLICT_TYPE_DATE_OVERLAP = 1;
  CONFLICT_TYPE_GAP = 2;
  CONFLICT_TYPE_NO_RIGHT = 3;
  CONFLICT_TYPE_DELETION = 4;
}

message TemplateApplication {
  string right_id = 1;
  int32 number_applied_entries = 2;
  string template_name = 3;
  int32 number_of_errors = 4;
  TemplateApplication exception = 6;
}

message ApplyTemplatesResponse {
  repeated TemplateApplication template_applications = 1;
}
